--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,19 @@ header{
     font-size: 250px;
     text-align: center;
 }
+ul,
+ol,
+dl{
+    font-family: sans-serif;
+    font: Arial;
+    font-size: 20px;
+    color: #0f2b4c;
+    text-align: justify;
+}
+
+li{
+  line-height: 1.5;
+}
 body {
     background-color: #e3ecea;
 }
